# evalify-evaluator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  run_api.sh
.github/: copilot-instructions.md
docs/: backend_evaluation_api.md
docs/architecture/: system_flow.md
docs/evaluators/: README.md
scripts/: README.md  start_all_workers.sh  start_all_workers_tmux.sh  start_coding_worker.sh  start_desc_worker.sh  start_mcq_worker.sh  stop_all_workers.sh  stop_all_workers_tmux.sh
src/evaluator/: __init__.py  celery_app.py  config.py  dependencies.py  main.py  version.py
src/evaluator/api/: __init__.py
src/evaluator/api/routers/: __init__.py  evaluation.py
src/evaluator/clients/: __init__.py  backend_client.py  judge0_client.py  redis_client.py
src/evaluator/core/: __init__.py  middleware.py
src/evaluator/core/schemas/: __init__.py  api.py  backend_api.py  tasks.py
src/evaluator/worker/: __init__.py
src/evaluator/worker/evaluators/: __init__.py  base.py  coding_evaluator.py  factory.py  fitb_evaluator.py  match_evaluator.py  mcq_evaluator.py  mmcq_evaluator.py  stub_sleep_evaluator.py  true_false_evaluator.py
src/evaluator/worker/tasks/: __init__.py  question.py  quiz.py  student.py
test_scripts/: debug_quiz_responses.py  invoke_quiz_job.py  manual_progress_evaluation.py  manual_test_evaluation.py
tests/: __init__.py  test_backend_client.py  test_evaluators.py  test_judge0_client.py  test_progress_tracking.py  test_quiz_filters.py
(+2 files in other folders)
