[project]
name = "evalify-evaluator"
version = "0.1.0"
description = "Evalify's Scalable Evaluation Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "fakeredis>=2.30.1",
    "fastapi[standard]>=0.116.1",
    "gevent>=25.5.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.0",
    "rich>=13.9.0",
    "uvicorn>=0.35.0",
]
